[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "whatsbyapi.__version__"}
readme = {file = "README.rst", content-type = "text/x-rst"}
dependencies = {file = "requirements.txt"}

[tool.setuptools.packages.find]
include = ["whatsbyapi*"]
exclude = ["tests*"]

[project]
name = "whatsbyapi"
description = "Python wrapper for the WhatsApp Cloud API with Webhook support"
dynamic = ["version", "readme", "dependencies"]
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    {name = "bdelhak Zaaim", email = "abdelhakzammii@gmail.com"},
]
keywords = ['whatsapp', 'whatsapp-api', 'whatsapp-cloud-api', 'whatsapp-cloud', 'whatsapp-api-python',
    'whatsapp-cloud-api-python', 'whatsbyapi', 'wapy', 'wa', 'wa-api', 'wa-cloud-api', 'wa-cloud', 'wa-api-python',
    'wa-cloud-api-python', 'whatsapp-webhook', 'whatsapp-webhook-python', 'whatsapp-webhook-api', 'whatsapp-flows',
    'whatsapp-cloud-api-flows'
]
classifiers = [
    'Topic :: Communications :: Chat',
    'Topic :: Communications',
    'Topic :: Utilities',
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application Frameworks"
]

[project.optional-dependencies]
flask = ['flask']
fastapi = ['fastapi', 'uvicorn[standard]']
cryptography = ['cryptography']


